--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "vuepress dev blog",
-    "build": "vuepress build blog"
+    "build": "vuepress build blog",
+    "gh": "bash scripts/deploy-gh.sh"
   },
   "devDependencies": {
     "@vuepress/theme-blog": "^2.3.3",
