--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "dev": "vuepress dev blog",
-    "build": "vuepress build blog",
-    "gh": "bash scripts/deploy-gh.sh"
+    "build": "vuepress build blog"
   },
   "devDependencies": {
     "@vuepress/theme-blog": "^2.3.3",
